@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.streamlink-tester" name="Streamlink Tester" version="1.2.1" provider-name="Twilight0">
+<addon id="plugin.video.streamlink-tester" name="Streamlink Tester" version="1.2.2" provider-name="Twilight0">
     <requires>
         <import addon="xbmc.python" version="2.24.0"/>
         <import addon="script.module.tulip" version="1.4.1"/>
-        <import addon="script.module.streamlink.base" version="2018.06.01"/>
+        <import addon="script.module.streamlink.base" version="2018.06.20"/>
     </requires>
     <extension point="xbmc.python.pluginsource" library="main.py">
         <provides>video</provides>
@@ -18,9 +18,8 @@
         <website>https://twitter.com/TwilightZer0</website>
         <source>https://github.com/Twilight0/plugin.video.streamlink-tester</source>
         <size>106257</size>
-        <news>[B]1.2.1[/B] - 12-06-2018
-- Do not allow addition to history when empty string given
-- Fixed removal of new line when removing individual links</news>
+        <news>[B]1.2.2[/B] - 20-06-2018
+- Except gracefull when no args attribute is present.</news>
         <assets>
             <icon>icon.png</icon>
         </assets>
